[package]
name = "video_web_page_generator"
version = "0.2.1"
edition = "2021"
description = "A basic tool written in rust that makes a html page for embeding videos in discord and twitter from other websites."
readme = "README.md"
repository = "https://github.com/BuyMyMojo/video-web-page-generator/"
license = "GPL-2.0"
keywords = ["html", "video"]
categories = ["command-line-utilities"]
exclude = ["/index.html", "/target", "/.vscode", "/Cargo.lock"]

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
